@@ -165,6 +165,25 @@ public class ExtractingRequestHandlerTest extends SolrTestCaseJ4 {
     assertQ(req("title:\"Word 2003 Title\""), "//*[@numFound='1']");
     // now 2 of them:
     assertQ(req("extractedContent:\"This is a test of PDF and Word extraction in Solr, it is only a test\""), "//*[@numFound='2']");
+
+    // compressed file
+    loadLocal("extraction/tiny.txt.gz", 
+              "fmap.created", "extractedDate", 
+              "fmap.producer", "extractedProducer",
+              "fmap.creator", "extractedCreator", 
+              "fmap.Keywords", "extractedKeywords",
+              "fmap.Author", "extractedAuthor",
+              "uprefix", "ignored_",
+              "fmap.content", "extractedContent",
+              "fmap.language", "extractedLanguage",
+              "fmap.Last-Modified", "extractedDate",
+              "literal.id", "tiny.txt.gz");
+    assertU(commit());
+    assertQ(req("id:tiny.txt.gz")
+            , "//*[@numFound='1']"
+            , "//*/arr[@name='stream_name']/str[.='tiny.txt.gz']"
+            );
+
   }
 
 
